--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.05.2022 08:16:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.05.2022 08:47:32</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -150,7 +150,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh se susenymi rajcaty a olivami, libanonsky krupkovy salat s cerstvymi okurkami, petrzelkou, zeleninou a citronem {L} 145</li><li>Peceny filet z cerstveho okounika a tresky se susenymi rajcaty a olivami, libanonsky krupkovy salat s cerstvymi okurkami, petrzelkou, zeleninou a citronem {L} 175</li><li>Burrito s mexickym carnitas {trhane veprove} s palivymi slovenskymi paprikami, pecene brambory, jogurtovy dip, salatek {L} 145</li><li>Grilovane medailonky z krutich prsou s merunkovym catny s nepalskym kardamomem, korenena ryze s cockou, salatek 175</li><li>Smazeny kvetak, bramborovy salat s cerstvymi okurkami, redkvickami, bylinkami a majonezou {L} 145 </li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, sled, uzena treska}, pesto z medvediho cesneku, pecena baby paprika, pohanka s pecenou zeleninou, salatek 149</li><li>Peceny filet z cerstveho candata s pecenou baby paprikou a pestem z medvediho cesneku, pohanka s pecenou zeleninou, salatek 179</li><li>Pomalu dusene hovezi ve sladke omacce se zazvorem, omackou hoisin a korenim peti vuni, jasminova ryze, salatek 149</li><li>Italske rajcatove rizoto s listovym spenatem a pecenymi veprovymi licky, hobliny tvrdeho syra, salatek 169</li><li>Indicke kari s kvetakem, hraskem, syrem halloumi, rajcaty a jogurtem, jasminova ryze 149</li></ol>
 </td>
 </tr>
 </table>
